--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      android: 29
-      java: corretto8
+      java: openjdk11
   build:
     commands:
       - ./gradlew testMockDebugUnitTest
