--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,8 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: corretto11
+      java: openjdk8
+      android: 28
   build:
     commands:
       - ./gradlew testMockDebugUnitTest
