--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   install:
     runtime-versions:
       android: 29
+      java: corretto8
   build:
     commands:
       - ./gradlew testMockDebugUnitTest
