--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,8 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: openjdk11
+      android: 29
+      java: corretto11
   build:
     commands:
       - ./gradlew testMockDebugUnitTest --stacktrace
